--- a/interior_reimaginer/examples/colab_3d_reconstruction.ipynb
+++ b/interior_reimaginer/examples/colab_3d_reconstruction.ipynb
@@ -173,13 +173,10 @@
     "plt.axis('off')\n",
     "plt.show()\n",
     "\n",
-    "# Interactive visualization (may not work in all Colab environments)\n",
-    "try:\n",
-    "    print(\"Opening interactive point cloud viewer (close the window to continue)...\")\n",
-    "    depth_reconstructor.visualize_pointcloud(pcd)\n",
-    "except Exception as e:\n",
-    "    print(f\"Interactive visualization failed: {e}\")\n",
-    "    print(\"This is expected in some Colab environments without display access.\")"
+    "# Note: Interactive visualization in Colab\n",
+    "print(\"Note: Interactive 3D visualization typically doesn't work in Colab's environment.\")\n",
+    "print(\"We're providing rendered previews instead of trying to launch interactive viewers.\")\n",
+    "print(\"To interact with the 3D models, download them and use external software like MeshLab or Blender.\")"
    ]
   },
   {
@@ -210,14 +207,6 @@
     "    plt.title(\"Mesh Preview\")\n",
     "    plt.axis('off')\n",
     "    plt.show()\n",
-    "    \n",
-    "    # Interactive visualization (may not work in all Colab environments)\n",
-    "    try:\n",
-    "        print(\"Opening interactive mesh viewer (close the window to continue)...\")\n",
-    "        depth_reconstructor.visualize_mesh(mesh)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Interactive visualization failed: {e}\")\n",
-    "        print(\"This is expected in some Colab environments without display access.\")\n",
     "except Exception as e:\n",
     "    print(f\"Mesh creation failed: {e}\")"
    ]
@@ -279,6 +268,21 @@
     "        files.download(mesh_path)\n",
     "except Exception as e:\n",
     "    print(f\"Error downloading mesh: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Viewing the 3D Models\n",
+    "\n",
+    "After downloading, you can view the 3D models using:\n",
+    "\n",
+    "1. **MeshLab** - Free and open-source 3D model viewer (https://www.meshlab.net/)\n",
+    "2. **Blender** - Free 3D creation suite (https://www.blender.org/)\n",
+    "3. **Online viewers** like [3D Viewer Online](https://3dviewer.net/)\n",
+    "\n",
+    "These tools will allow you to interact with the models, apply different visualizations, and even edit them."
    ]
   },
   {
