--- a/interior_reimaginer/examples/advanced_3d_visualization.ipynb
+++ b/interior_reimaginer/examples/advanced_3d_visualization.ipynb
@@ -47,6 +47,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Fix Import Issues\n",
+    "\n",
+    "Let's modify the `__init__.py` files to avoid import errors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a temporary fix for the models/__init__.py file to avoid UI import\n",
+    "%%writefile interior_reimaginer/models/__init__.py\n",
+    "# models/__init__.py\n",
+    "from .image_processor import ImageProcessor, ProcessedImage, RoomSegmentClass\n",
+    "from .interior_reimaginer import InteriorReimaginer\n",
+    "from .design_styles import DesignStyle, load_design_styles\n",
+    "\n",
+    "__all__ = [\n",
+    "    'ImageProcessor', \n",
+    "    'ProcessedImage', \n",
+    "    'RoomSegmentClass', \n",
+    "    'InteriorReimaginer', \n",
+    "    'DesignStyle', \n",
+    "    'load_design_styles'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import Required Modules"
    ]
   },
@@ -71,6 +103,9 @@
     "import ipyvolume as ipv\n",
     "import plotly.graph_objects as go\n",
     "from IPython.display import IFrame\n",
+    "\n",
+    "# Make sure Python can find our modules\n",
+    "sys.path.append('/content/CV_Project')\n",
     "\n",
     "# Import our project modules\n",
     "from interior_reimaginer.models.interior_reimaginer import InteriorReimaginer\n",
@@ -350,6 +385,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Mesh Visualization\n",
+    "\n",
+    "Create and visualize a 3D mesh from the point cloud:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Creating mesh from point cloud...\")\n",
+    "try:\n",
+    "    # Use the best point cloud based on point count\n",
+    "    best_pcd = lrm_pcd if len(lrm_pcd.points) > 100 else (diffusion_pcd if len(diffusion_pcd.points) > 100 else gan_pcd)\n",
+    "    \n",
+    "    if len(best_pcd.points) > 100:\n",
+    "        # Smooth the point cloud for better mesh generation\n",
+    "        best_pcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
+    "        best_pcd.orient_normals_towards_camera_location()\n",
+    "        \n",
+    "        # Create mesh\n",
+    "        mesh = depth_reconstructor.pointcloud_to_mesh(best_pcd)\n",
+    "        print(f\"Mesh created with {len(mesh.triangles)} triangles\")\n",
+    "        \n",
+    "        # Render mesh\n",
+    "        mesh_image = depth_reconstructor.render_mesh_image(mesh, width=1000, height=800)\n",
+    "        \n",
+    "        plt.figure(figsize=(16, 10))\n",
+    "        plt.imshow(mesh_image)\n",
+    "        plt.title(\"3D Mesh Reconstruction\")\n",
+    "        plt.axis('off')\n",
+    "        plt.show()\n",
+    "        \n",
+    "        # Save mesh to OBJ file\n",
+    "        timestamp = int(time.time())\n",
+    "        mesh_path = depth_reconstructor.save_mesh(mesh, f\"interior_mesh_{timestamp}\")\n",
+    "        print(f\"Mesh saved to: {mesh_path}\")\n",
+    "        \n",
+    "        # Download the mesh file\n",
+    "        from google.colab import files\n",
+    "        files.download(mesh_path)\n",
+    "    else:\n",
+    "        print(\"Not enough points in point cloud for mesh generation\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Mesh creation failed: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion\n",
     "\n",
     "In this notebook, we've demonstrated several advanced 3D visualization techniques for interior reconstruction:\n",
@@ -358,7 +445,7 @@
     "2. GAN-based depth enhancement for better 3D reconstruction\n",
     "3. Diffusion-based methods for filling in missing depth information\n",
     "4. Local Region Models (LRM) for detailed geometry processing\n",
-    "5. Interactive 3D visualizations using various libraries\n",
+    "5. Interactive 3D visualizations and mesh creation\n",
     "\n",
     "These techniques provide significant improvements over standard Plotly visualizations, offering better detail, more realistic rendering, and enhanced interactivity for exploring 3D reconstructions."
    ]
